2008-12-07  Dirk Schulze  <krit@webkit.org>

Reviewed by Oliver Hunt.

WebCore:

        Add gradient and pattern support for strokeRect on canvas/Cg.

        Canvas strokeRect() doesn't support gradients
        https://bugs.webkit.org/show_bug.cgi?id=19790

        Test: fast/canvas/canvas-strokeRect.html

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::strokeRect):

LayoutTests:

        Tests strokeRect with patterns and gradients.

        * fast/canvas/canvas-strokeRect-expected.txt: Added.
        * fast/canvas/canvas-strokeRect.html: Added.
        * fast/canvas/resources/canvas-strokeRect.js: Added.


Canonical link: https://commits.webkit.org/31284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39080 268f45cc-cd09-0410-ab3c-d52691b4dbfc